parse/internal/parser/testdata/failing/union-ellipsis-after-fail.trunnel
struct ellipsis_after_fail {
    u8 tag;
    union addr[tag] {
       4 : fail; ...;
    };
}
